--- a/scripts/smote.ipynb
+++ b/scripts/smote.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from imblearn.over_sampling import SMOTE\n",
     "from sklearn.datasets import make_classification\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -16,17 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Ler o arquivo CSV com as colunas na primeira linha\n",
-    "df = pd.read_csv('../data/diabetes_prediction_dataset.csv')"
+    "df = pd.read_csv('../data/diabetes_prediction_dataset.csv', header=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -106,23 +107,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Figure size 2000x1000 with 0 Axes>"
+       "<Figure size 1200x500 with 0 Axes>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<Figure size 2000x1000 with 0 Axes>"
+       "<Figure size 1200x500 with 0 Axes>"
       ]
      },
      "metadata": {},
@@ -131,21 +132,21 @@
    ],
    "source": [
     "# Visualizando a distribuição das classes antes e depois do SMOTE\n",
-    "plt.figure(figsize=(20, 10))"
+    "plt.figure(figsize=(12, 5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x24f68627fa0>"
+       "<matplotlib.legend.Legend at 0x24f74ae1340>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -169,16 +170,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x24f684e98b0>"
+       "<matplotlib.legend.Legend at 0x24f74ae5ee0>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +265,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Identificar automaticamente as características e a classe\n",
+    "features = X_res\n",
+    "target = y_res\n",
+    "\n",
+    "# Separar os dados em características (X) e rótulos (y)\n",
+    "X = features\n",
+    "y = target\n",
+    "\n",
+    "# Criando um array multidimensional usando numpy\n",
+    "smote_data = np.column_stack((X, y))\n",
+    "\n",
+    "# Criando um dataFrame em pandas\n",
+    "df = pd.DataFrame(smote_data)\n",
+    "\n",
+    "# Salvando o DataFrame como um arquivo .csv\n",
+    "df.to_csv('dados_smote.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -281,13 +306,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import export_text\n",
     "\n",
-    "# Identificar automaticamente as características e a classe\n",
-    "features = X_res\n",
-    "target = y_res\n",
-    "\n",
-    "# Separar os dados em características (X) e rótulos (y)\n",
-    "X = features\n",
-    "y = target\n",
+    "# lendo o arquivo csv\n",
+    "df = pd.read_csv('dados_smote.csv')\n",
     "\n",
     "# Dividir o conjunto de dados em conjuntos de treinamento e teste\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
